--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ LI {text-align: center;}
 
 <UL style="list-style: none;"><B>WORK</B>
     <LI><A HREF="https://docs.google.com/spreadsheets/d/1gydN_H8M-Oz4S9oHrYr6R_UycHH-_E9pdYESJHkOsaQ/edit#gid=1985007998" target="_blank">PROGRESS BOARD</A>
-    <LI><A HREF="https://mail.google.com/mail/u/1/#inbox/" target="_blank">GMAIL</A>
+    <LI><A HREF="https://online.rimscentral.com/Portal.aspx" target="_blank">RIMS CENTRAL</A>
     <LI><A HREF="https://sugarsync.com" target="_blank">SUGARSYNC</A>
     <LI><A HREF="https://stdb.com" target="_blank">STDB</A>
     <LI><A HREF="https://texaslmi.com" target="_blank">TEXASLMI</A>
@@ -34,11 +34,11 @@ LI {text-align: center;}
     <LI><A HREF="https://publication.yieldstar.com" target="_blank">REALPAGE</A>
 </UL>
 
-<UL style="list-style: none;"><B>PERSONAL</B>
-    <LI><A HREF="https://mail.google.com/mail/u/0/#inbox/" target="_blank">GMAIL</A>
-    <LI><A HREF="https://youtube.com" target="_blank">YOUTUBE</A>
-    <LI><A HREF="https://ebay.com" target="_blank">EBAY</A>
-    <LI><A HREF="https://amazon.com" target="_blank">AMAZON</A>
+<UL style="list-style: none;"><B>Email</B>
+    <LI><A HREF="https://mail.google.com/mail/u/0/#inbox/" target="_blank">GMAIL I</A>
+    <LI><A HREF="https://mail.google.com/mail/u/1/#inbox/" target="_blank">GMAIL II</A>
+    <LI><A HREF="https://mail.google.com/mail/u/2/#inbox/" target="_blank">GMAIL III</A>
+    <LI><A HREF="https:https://outlook.live.com/mail/0/" target="_blank">HOTMAIL</A>
 </UL>
 
 <HR>
