--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@ LI {text-align: center;}
     <LI><A HREF="https://outlook.live.com/mail/0/" target="_blank">HOTMAIL</A>
 </UL>
 
+<form action="https://google.com">
+    <input type="submit" value="Go to Google" />
+</form>
+
 <HR>
 </FONT>
 
