--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@ LI {text-align: center;}
     <p><B>Where Perfection Happens</B></p>
 
 <UL style="list-style: none;"><B>SEARCH ENGINES</B>
-    <LI><A HREF="https://google.com" target="_blank">GOOGLE</A>
+    <LI><form action="https://google.com">
+        <input type="submit" value="Go to Google" />
+        </form>
 </UL>
 
 <UL style="list-style: none;"><B>WORK</B>
