--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ LI {text-align: center;}
     <p><B>Where Perfection Happens</B></p>
 
 <UL style="list-style: none;"><B>SEARCH ENGINES</B>
-    <LI><form action="https://google.com">
+    <LI><form action="https://google.com" target="_blank">
         <input type="submit" value="Go to Google" />
         </form>
 </UL>
@@ -41,6 +41,10 @@ LI {text-align: center;}
     <LI><A HREF="https://mail.google.com/mail/u/1/#inbox/" target="_blank">GMAIL II</A>
     <LI><A HREF="https://outlook.live.com/mail/0/" target="_blank">HOTMAIL</A>
 </UL>
+
+<form action="https://google.com">
+    <input type="submit" value="Go to Google" />
+</form>
 
 <form action="https://google.com">
     <input type="submit" value="Go to Google" />
