--- a/index.html
+++ b/index.html
@@ -26,20 +26,42 @@ LI {text-align: center;}
 </UL>
 
 <UL style="list-style: none;"><B>WORK</B>
-    <LI><A HREF="https://docs.google.com/spreadsheets/d/1gydN_H8M-Oz4S9oHrYr6R_UycHH-_E9pdYESJHkOsaQ/edit#gid=1985007998" target="_blank">PROGRESS BOARD</A>
-    <LI><A HREF="https://online.rimscentral.com/Portal.aspx" target="_blank">RIMS CENTRAL</A>
-    <LI><A HREF="https://sugarsync.com" target="_blank">SUGARSYNC</A>
-    <LI><A HREF="https://stdb.com" target="_blank">STDB</A>
-    <LI><A HREF="https://texaslmi.com" target="_blank">TEXASLMI</A>
-    <LI><A HREF="https://www.recenter.tamu.edu" target="_blank">NEWSTALK</A>
-    <LI><A HREF="https://alndata.com" target="_blank">ALN</A>
-    <LI><A HREF="https://publication.yieldstar.com" target="_blank">REALPAGE</A>
+    <LI><form action="https://docs.google.com/spreadsheets/d/1gydN_H8M-Oz4S9oHrYr6R_UycHH-_E9pdYESJHkOsaQ/edit#gid=1985007998" target="_blank">
+        <input type="submit" value="Go to Progress Board" />
+        </form>
+    <LI><form action="https://online.rimscentral.com/Portal.aspx" target="_blank">
+        <input type="submit" value="Go to Rims Central" />
+        </form>
+    <LI><form action="https://sugarsync.com" target="_blank">
+        <input type="submit" value="Go to Sugarsync" />
+        </form>
+    <LI><form action="https://stdb.com" target="_blank">
+        <input type="submit" value="Go to STDB" />
+        </form>
+    <LI><form action="https://texaslmi.com" target="_blank">
+        <input type="submit" value="Go to TexasLMI" />
+        </form>
+    <LI><form action="https://www.recenter.tamu.edu" target="_blank">
+        <input type="submit" value="Go to Newstalk" />
+        </form>
+    <LI><form action="https://alndata.com" target="_blank">
+        <input type="submit" value="Go to ALN" />
+        </form>
+    <LI><form action="https://publication.yieldstar.com" target="_blank">
+        <input type="submit" value="Go to RealPage" />
+        </form>
 </UL>
 
 <UL style="list-style: none;"><B>Email</B>
-    <LI><A HREF="https://mail.google.com/mail/u/0/#inbox/" target="_blank">GMAIL I</A>
-    <LI><A HREF="https://mail.google.com/mail/u/1/#inbox/" target="_blank">GMAIL II</A>
-    <LI><A HREF="https://outlook.live.com/mail/0/" target="_blank">HOTMAIL</A>
+    <LI><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank">
+        <input type="submit" value="Go to Gmail I" />
+        </form>
+    <LI><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
+        <input type="submit" value="Go to Gmail II" />
+        </form>
+    <LI><form action="https://outlook.live.com/mail/0/" target="_blank">
+        <input type="submit" value="Go to Outlook" />
+        </form>
 </UL>
 
 <form action="https://google.com">
