--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ LI {text-align: center;}
     <LI><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank">
         <input type="submit" value="Go to Gmail I" />
         </form>
-    <LI><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
+        <form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
         <input type="submit" value="Go to Gmail II" />
         </form>
-    <LI><form action="https://outlook.live.com/mail/0/" target="_blank">
+        <form action="https://outlook.live.com/mail/0/" target="_blank">
         <input type="submit" value="Go to Outlook" />
         </form>
 </UL>
