--- a/index.html
+++ b/index.html
@@ -52,13 +52,10 @@ LI {text-align: center;}
 <UL style="list-style: none;"><B>Email</B>
     <LI><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank">
         <input type="submit" value="Go to Gmail I" />
-        </form>
-        <form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
+        </form><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
         <input type="submit" value="Go to Gmail II" />
-        </form>
-        <form action="https://outlook.live.com/mail/0/" target="_blank">
-        <input type="submit" value="Go to Outlook" />
-        </form>
+        </form><form action="https://outlook.live.com/mail/0/" target="_blank">
+        <input type="submit" value="Go to Outlook" /></form>
 </UL>
 
 <HR>
