--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@ LI {text-align: center;}
 </UL>
 
 <UL style="list-style: none;"><B>Email</B>
-    <LI><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank"><input type="submit" value="Go to Gmail I" /></form><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank"><input type="submit" value="Go to Gmail II" /></form><form action="https://outlook.live.com/mail/0/" target="_blank"><input type="submit" value="Go to Outlook" /></form>
+    <LI><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank">
+        <input type="submit" value="Go to Gmail I" />
+        </form>
+    <LI><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
+        <input type="submit" value="Go to Gmail II" />
+        </form>
+    <LI><form action="https://outlook.live.com/mail/0/" target="_blank">
+        <input type="submit" value="Go to Outlook" />
+        </form>
 </UL>
 
 <HR>
