--- a/index.html
+++ b/index.html
@@ -16,38 +16,38 @@ LI {text-align: center;}
 
 <h1>Multifamily Appraisal Specialists</h1>
 
-<UL style="list-style: none;"><B>SEARCH ENGINES</B>
-    <LI><form action="https://google.com" target="_blank">
+<DIV><B>SEARCH ENGINES</B>
+        <form action="https://google.com" target="_blank">
         <input type="submit" value="Go to Google" />
         </form>
-</UL>
+</DIV>
 
-<UL style="list-style: none;"><B>WORK</B>
-    <LI><form action="https://docs.google.com/spreadsheets/d/1gydN_H8M-Oz4S9oHrYr6R_UycHH-_E9pdYESJHkOsaQ/edit#gid=1985007998" target="_blank">
+<DIV><B>WORK</B>
+        <form action="https://docs.google.com/spreadsheets/d/1gydN_H8M-Oz4S9oHrYr6R_UycHH-_E9pdYESJHkOsaQ/edit#gid=1985007998" target="_blank">
         <input type="submit" value="Go to Progress Board" />
         </form>
-    <LI><form action="https://online.rimscentral.com/Portal.aspx" target="_blank">
+        <form action="https://online.rimscentral.com/Portal.aspx" target="_blank">
         <input type="submit" value="Go to Rims Central" />
         </form>
-    <LI><form action="https://sugarsync.com" target="_blank">
+        <form action="https://sugarsync.com" target="_blank">
         <input type="submit" value="Go to Sugarsync" />
         </form>
-    <LI><form action="https://stdb.com" target="_blank">
+        <form action="https://stdb.com" target="_blank">
         <input type="submit" value="Go to STDB" />
         </form>
-    <LI><form action="https://texaslmi.com" target="_blank">
+        <form action="https://texaslmi.com" target="_blank">
         <input type="submit" value="Go to TexasLMI" />
         </form>
-    <LI><form action="https://www.recenter.tamu.edu" target="_blank">
+        <form action="https://www.recenter.tamu.edu" target="_blank">
         <input type="submit" value="Go to Newstalk" />
         </form>
-    <LI><form action="https://alndata.com" target="_blank">
+        <form action="https://alndata.com" target="_blank">
         <input type="submit" value="Go to ALN" />
         </form>
-    <LI><form action="https://publication.yieldstar.com" target="_blank">
+        <form action="https://publication.yieldstar.com" target="_blank">
         <input type="submit" value="Go to RealPage" />
         </form>
-</UL>
+</DIV>
 
 <DIV><B>Email</B>
         <form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank">
