--- a/index.html
+++ b/index.html
@@ -51,14 +51,9 @@ LI {text-align: center;}
 
 <DIV><B>Email</B>
         <form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank">
-        <input type="submit" value="Go to Gmail I" />
-        </form>
-        <form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
-        <input type="submit" value="Go to Gmail II" />
-        </form>
-        <form action="https://outlook.live.com/mail/0/" target="_blank">
-        <input type="submit" value="Go to Outlook" />
-        </form>
+        <input type="submit" value="Go to Gmail I" /></form><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
+        <input type="submit" value="Go to Gmail II" /></form><form action="https://outlook.live.com/mail/0/" target="_blank">
+        <input type="submit" value="Go to Outlook" /></form>
 </DIV>
 
 <HR>
