--- a/index.html
+++ b/index.html
@@ -49,11 +49,16 @@ LI {text-align: center;}
         </form>
 </DIV>
 
-<DIV><B>Email</B>
+<DIV style ="display:in-line block"><B>Email</B>
         <form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank">
-        <input type="submit" value="Go to Gmail I" /></form><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
-        <input type="submit" value="Go to Gmail II" /></form><form action="https://outlook.live.com/mail/0/" target="_blank">
-        <input type="submit" value="Go to Outlook" /></form>
+        <input type="submit" value="Go to Gmail I" />
+        </form>
+        <form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
+        <input type="submit" value="Go to Gmail II" />
+        </form>
+        <form action="https://outlook.live.com/mail/0/" target="_blank">
+        <input type="submit" value="Go to Outlook" />
+        </form>
 </DIV>
 
 <HR>
