--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ LI {text-align: center;}
         </form>
 </DIV>
 
-<DIV style ="display:in-line block"><B>Email</B>
+<DIV style ="display:inline"><B>Email</B>
         <form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank">
         <input type="submit" value="Go to Gmail I" />
         </form>
