--- a/index.html
+++ b/index.html
@@ -49,16 +49,12 @@ LI {text-align: center;}
         </form>
 </DIV>
 
-<DIV style ="display:inline"><B>Email</B>
-        <form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank">
-        <input type="submit" value="Go to Gmail I" />
-        </form>
-        <form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
-        <input type="submit" value="Go to Gmail II" />
-        </form>
-        <form action="https://outlook.live.com/mail/0/" target="_blank">
-        <input type="submit" value="Go to Outlook" />
-        </form>
+<DIV><B>EMAIL</B>
+        <DIV style = "display:inline"><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank">
+        <input type="submit" value="Go to Gmail I" /></form><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
+        <input type="submit" value="Go to Gmail II" /></form><form action="https://outlook.live.com/mail/0/" target="_blank">
+        <input type="submit" value="Go to Outlook" /></form>
+        </DIV>
 </DIV>
 
 <HR>
