--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ LI {text-align: center;}
 </DIV>
 
 <DIV><B>EMAIL</B>
-        <DIV style = "display:inline"><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank">
-        <input type="submit" value="Go to Gmail I" /></form><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank">
-        <input type="submit" value="Go to Gmail II" /></form><form action="https://outlook.live.com/mail/0/" target="_blank">
-        <input type="submit" value="Go to Outlook" /></form>
+        <DIV style="display:inline">
+                <p><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank"><input type="submit" value="Go to Gmail I" /></form></p>
+                <p><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank"><input type="submit" value="Go to Gmail II" /></form></p>
+                <p><form action="https://outlook.live.com/mail/0/" target="_blank"><input type="submit" value="Go to Outlook" /></form></p>
         </DIV>
 </DIV>
 
