--- a/index.html
+++ b/index.html
@@ -17,40 +17,22 @@ LI {text-align: center;}
 <h1>Multifamily Appraisal Specialists</h1>
 
 <DIV><B>SEARCH ENGINES</B>
-        <form action="https://google.com" target="_blank">
-        <input type="submit" value="Go to Google" />
-        </form>
+        <p><form action="https://google.com" target="_blank"><input type="submit" value="Go to Google" /></form></p>
 </DIV>
 
 <DIV><B>WORK</B>
-        <form action="https://docs.google.com/spreadsheets/d/1gydN_H8M-Oz4S9oHrYr6R_UycHH-_E9pdYESJHkOsaQ/edit#gid=1985007998" target="_blank">
-        <input type="submit" value="Go to Progress Board" />
-        </form>
-        <form action="https://online.rimscentral.com/Portal.aspx" target="_blank">
-        <input type="submit" value="Go to Rims Central" />
-        </form>
-        <form action="https://sugarsync.com" target="_blank">
-        <input type="submit" value="Go to Sugarsync" />
-        </form>
-        <form action="https://stdb.com" target="_blank">
-        <input type="submit" value="Go to STDB" />
-        </form>
-        <form action="https://texaslmi.com" target="_blank">
-        <input type="submit" value="Go to TexasLMI" />
-        </form>
-        <form action="https://www.recenter.tamu.edu" target="_blank">
-        <input type="submit" value="Go to Newstalk" />
-        </form>
-        <form action="https://alndata.com" target="_blank">
-        <input type="submit" value="Go to ALN" />
-        </form>
-        <form action="https://publication.yieldstar.com" target="_blank">
-        <input type="submit" value="Go to RealPage" />
-        </form>
+        <p><form action="https://docs.google.com/spreadsheets/d/1gydN_H8M-Oz4S9oHrYr6R_UycHH-_E9pdYESJHkOsaQ/edit#gid=1985007998" target="_blank"><input type="submit" value="Go to Progress Board" /></form></p>
+        <p><form action="https://online.rimscentral.com/Portal.aspx" target="_blank"><input type="submit" value="Go to Rims Central" /></form></p>
+        <p><form action="https://sugarsync.com" target="_blank"><input type="submit" value="Go to Sugarsync" /></form></p>
+        <p><form action="https://stdb.com" target="_blank"><input type="submit" value="Go to STDB" /></form></p>
+        <p><form action="https://texaslmi.com" target="_blank"><input type="submit" value="Go to TexasLMI" /></form></p>
+        <P><form action="https://www.recenter.tamu.edu" target="_blank"><input type="submit" value="Go to Newstalk" /></form></p>
+        <p><form action="https://alndata.com" target="_blank"><input type="submit" value="Go to ALN" /></form></p>
+        <p><form action="https://publication.yieldstar.com" target="_blank"><input type="submit" value="Go to RealPage" /></form></p>
 </DIV>
 
 <DIV><B>EMAIL</B>
-        <DIV style="display:inline">
+        <DIV style="display:inline-block">
                 <p><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank"><input type="submit" value="Go to Gmail I" /></form></p>
                 <p><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank"><input type="submit" value="Go to Gmail II" /></form></p>
                 <p><form action="https://outlook.live.com/mail/0/" target="_blank"><input type="submit" value="Go to Outlook" /></form></p>
