--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@ LI {text-align: center;}
         <p><form action="https://publication.yieldstar.com" target="_blank"><input type="submit" value="Go to RealPage" /></form></p>
 </DIV>
 
-<DIV><B>EMAIL</B>
+<DIV><B>EMAIL: </B>
         <DIV style="display:inline-block">
-                <p><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank"><input type="submit" value="Go to Gmail I" /></form></p>
-                <p><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank"><input type="submit" value="Go to Gmail II" /></form></p>
-                <p><form action="https://outlook.live.com/mail/0/" target="_blank"><input type="submit" value="Go to Outlook" /></form></p>
+                <p><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank"><input type="submit" value="Go to Gmail I" /></form></p><p><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank"><input type="submit" value="Go to Gmail II" /></form></p><p><form action="https://outlook.live.com/mail/0/" target="_blank"><input type="submit" value="Go to Outlook" /></form></p>
         </DIV>
 </DIV>
 
