--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@ LI {text-align: center;}
 <DIV><B>SEARCH ENGINES</B>
         <p><form action="https://google.com" target="_blank"><input type="submit" value="Go to Google" /></form></p>
 </DIV>
+        
+<ul>
+    <li style="display:inline-block;">
+        <P><form action="https://www.recenter.tamu.edu" target="_blank"><input type="submit" value="Go to Newstalk" /></form></p>
+    </li>
+    <li style="display:inline-block;">
+        <p><form action="https://alndata.com" target="_blank"><input type="submit" value="Go to ALN" /></form></p>
+    </li>
+</ul>
 
 <DIV><B>WORK</B>
         <p><form action="https://docs.google.com/spreadsheets/d/1gydN_H8M-Oz4S9oHrYr6R_UycHH-_E9pdYESJHkOsaQ/edit#gid=1985007998" target="_blank"><input type="submit" value="Go to Progress Board" /></form></p>
