--- a/index.html
+++ b/index.html
@@ -16,28 +16,21 @@ LI {text-align: center;}
 
 <h1>Multifamily Appraisal Specialists</h1>
 
-<DIV><B>SEARCH ENGINES</B>
+<ul><B>SEARCH ENGINES</B>
+    <li style="display:inline-block;">
         <p><form action="https://google.com" target="_blank"><input type="submit" value="Go to Google" /></form></p>
-</DIV>
-        
-<ul>
-    <li style="display:inline-block;">
-        <P><form action="https://www.recenter.tamu.edu" target="_blank"><input type="submit" value="Go to Newstalk" /></form></p>
-    </li>
-    <li style="display:inline-block;">
-        <p><form action="https://alndata.com" target="_blank"><input type="submit" value="Go to ALN" /></form></p>
     </li>
 </ul>
 
 <DIV><B>WORK</B>
-        <p><form action="https://docs.google.com/spreadsheets/d/1gydN_H8M-Oz4S9oHrYr6R_UycHH-_E9pdYESJHkOsaQ/edit#gid=1985007998" target="_blank"><input type="submit" value="Go to Progress Board" /></form></p>
-        <p><form action="https://online.rimscentral.com/Portal.aspx" target="_blank"><input type="submit" value="Go to Rims Central" /></form></p>
-        <p><form action="https://sugarsync.com" target="_blank"><input type="submit" value="Go to Sugarsync" /></form></p>
-        <p><form action="https://stdb.com" target="_blank"><input type="submit" value="Go to STDB" /></form></p>
-        <p><form action="https://texaslmi.com" target="_blank"><input type="submit" value="Go to TexasLMI" /></form></p>
-        <P><form action="https://www.recenter.tamu.edu" target="_blank"><input type="submit" value="Go to Newstalk" /></form></p>
-        <p><form action="https://alndata.com" target="_blank"><input type="submit" value="Go to ALN" /></form></p>
-        <p><form action="https://publication.yieldstar.com" target="_blank"><input type="submit" value="Go to RealPage" /></form></p>
+        <p style="display:inline-block;"><form action="https://docs.google.com/spreadsheets/d/1gydN_H8M-Oz4S9oHrYr6R_UycHH-_E9pdYESJHkOsaQ/edit#gid=1985007998" target="_blank"><input type="submit" value="Go to Progress Board" /></form></p>
+        <p style="display:inline-block;"><form action="https://online.rimscentral.com/Portal.aspx" target="_blank"><input type="submit" value="Go to Rims Central" /></form></p>
+        <p style="display:inline-block;"><form action="https://sugarsync.com" target="_blank"><input type="submit" value="Go to Sugarsync" /></form></p>
+        <p style="display:inline-block;"><form action="https://stdb.com" target="_blank"><input type="submit" value="Go to STDB" /></form></p>
+        <p style="display:inline-block;"><form action="https://texaslmi.com" target="_blank"><input type="submit" value="Go to TexasLMI" /></form></p>
+        <P style="display:inline-block;"><form action="https://www.recenter.tamu.edu" target="_blank"><input type="submit" value="Go to Newstalk" /></form></p>
+        <p style="display:inline-block;"><form action="https://alndata.com" target="_blank"><input type="submit" value="Go to ALN" /></form></p>
+        <p style="display:inline-block;"><form action="https://publication.yieldstar.com" target="_blank"><input type="submit" value="Go to RealPage" /></form></p>
 </DIV>
 
 <DIV><B>EMAIL</B>
