--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ LI {text-align: center;}
 <h1>Multifamily Appraisal Specialists</h1>
 
 <ul><B>SEARCH ENGINES</B>
-    <li>
+    <li style="display:inline-block;">
         <p><form action="https://google.com" target="_blank"><input type="submit" value="Go to Google" /></form></p>
     </li>
 </ul>
@@ -49,9 +49,17 @@ LI {text-align: center;}
     </li>
 </ul>
 
-<DIV><B>EMAIL</B>
-        <p><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank"><input type="submit" value="Go to Gmail I" /></form><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank"><input type="submit" value="Go to Gmail II" /></form><form action="https://outlook.live.com/mail/0/" target="_blank"><input type="submit" value="Go to Outlook" /></form></p>
-</DIV>
+<ul><B>EMAIL</B>
+    <li style="display:inline-block;">
+        <p><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank"><input type="submit" value="Go to Gmail I" /></form></p>
+    </li>
+    <li style="display:inline-block;">
+        <p><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank"><input type="submit" value="Go to Gmail II" /></form></p>
+    </li>
+    <li style="display:inline-block;">
+        <p><form action="https://outlook.live.com/mail/0/" target="_blank"><input type="submit" value="Go to Outlook" /></form></p>
+    </li>
+</ul>
 
 <HR>
 </FONT>
