--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@ LI {text-align: center;}
 
 <ul>
     <li style="display:inline-block;">
+        <p><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank"><input type="submit" value="Go to Gmail I" /></form></p>
+    </li>
+    <li style="display:inline-block;">
+        <p><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank"><input type="submit" value="Go to Gmail II" /></form></p>
+    </li>
+    <li style="display:inline-block;">
+        <p><form action="https://outlook.live.com/mail/0/" target="_blank"><input type="submit" value="Go to Outlook" /></form></p>
+    </li>
+</ul>
+
+<ul>
+    <li style="display:inline-block;">
         <p><form action="https://docs.google.com/spreadsheets/d/1gydN_H8M-Oz4S9oHrYr6R_UycHH-_E9pdYESJHkOsaQ/edit#gid=1985007998" target="_blank"><input type="submit" value="Go to Progress Board" /></form></p>
     </li>
     <li style="display:inline-block;">
@@ -51,13 +63,16 @@ LI {text-align: center;}
 
 <ul>
     <li style="display:inline-block;">
-        <p><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank"><input type="submit" value="Go to Gmail I" /></form></p>
+        <p><form action="http://www.houstoncad.org/" target="_blank"><input type="submit" value="Go to Houston CAD" /></form></p>
     </li>
     <li style="display:inline-block;">
-        <p><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank"><input type="submit" value="Go to Gmail II" /></form></p>
+        <p><form action="https://austincad.org/" target="_blank"><input type="submit" value="Go to Austin CAD" /></form></p>
     </li>
     <li style="display:inline-block;">
-        <p><form action="https://outlook.live.com/mail/0/" target="_blank"><input type="submit" value="Go to Outlook" /></form></p>
+        <p><form action="https://www.dallascounty.org/departments/tax/appraisal-districts.php" target="_blank"><input type="submit" value="Go to Dallas CAD" /></form></p>
+    </li>
+    <li style="display:inline-block;">
+        <p><form action="https://www.bcad.org/" target="_blank"><input type="submit" value="Go to Bexar CAD" /></form></p>
     </li>
 </ul>
 
