--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@ LI {text-align: center;}
     </li>
 </ul>
 
+<ul>
+    <li style="display:inline-block;">
+        <p><form action="http://www.microcounsel.com/WPTIPS.HTM" target="_blank"><input type="submit" value="Wordperfect Tips" /></form></p>
+    </li>
+</ul>
+
 <HR>
 </FONT>
 
