--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@ LI {text-align: center;}
 
 <ul>
     <li style="display:inline-block;">
-        <p><form action="https://google.com" target="_blank"><input type="submit" value="Go to Google" /></form></p>
+        <p><form action="https://google.com" target="_blank"><input type="submit" value="Google Search" /></form></p>
+    </li>
+    <li style="display:inline-block;">
+        <p><form action="https://drive.google.com/drive/u/0/my-drive" target="_blank"><input type="submit" value="Google Drive" /></form></p>
     </li>
 </ul>
 
