--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ LI {text-align: center;}
 
 <ul>
     <li style="display:inline-block;">
-        <p><form action="https://www.houstoncad.org/" target="_blank"><input type="submit" value="Go to Houston CAD" /></form></p>
+        <p><form action="http://www.houstoncad.org/" target="_blank"><input type="submit" value="Go to Houston CAD" /></form></p>
     </li>
     <li style="display:inline-block;">
         <p><form action="https://austincad.org/" target="_blank"><input type="submit" value="Go to Austin CAD" /></form></p>
@@ -84,10 +84,10 @@ LI {text-align: center;}
 
 <ul>
     <li style="display:inline-block;">
-        <p><form action="https://www.microcounsel.com/WPTIPS.HTM" target="_blank"><input type="submit" value="Wordperfect Tips" /></form></p>
+        <p><form action="http://www.microcounsel.com/WPTIPS.HTM" target="_blank"><input type="submit" value="Wordperfect Tips" /></form></p>
     </li>
     <li style="display:inline-block;">
-        <p><form action="https://www.youtube.com/watch?v=yNzB_FrwfcA" target="_blank"><input type="submit" value="Excellence" /></form></p>
+        <p><form action="https://youtu.be/yNzB_FrwfcA" target="_blank"><input type="submit" value="Excellence" /></form></p>
     </li>
 </ul>
 
