--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@ LI {text-align: center;}
     <li style="display:inline-block;">
         <p><form action="http://www.microcounsel.com/WPTIPS.HTM" target="_blank"><input type="submit" value="Wordperfect Tips" /></form></p>
     </li>
-    <li style="display:inline-block;">
-        <p><form action="https://youtu.be/yNzB_FrwfcA" target="_blank"><input type="submit" value="Excellence" /></form></p>
-    </li>
 </ul>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/yNzB_FrwfcA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <HR>
 </FONT>
