--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@ LI {text-align: center;}
 
 <h1>Multifamily Appraisal Specialists</h1>
 
-<ul>
-    <li style="display:inline-block;">
+<UL>
+    <LI style="display:inline-block;">
         <p><form action="https://google.com" target="_blank"><input type="submit" value="Google Search" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </LI>
+    <LI style="display:inline-block;">
         <p><form action="https://drive.google.com/drive/u/0/my-drive" target="_blank"><input type="submit" value="Google Drive" /></form></p>
-    </li>
-</ul>
+    </LI>
+</UL>
 
 <ul>
     <li style="display:inline-block;">
@@ -82,11 +82,11 @@ LI {text-align: center;}
     </li>
 </ul>
 
-<ul>
-    <li style="display:inline-block;">
+<div>
+    <div style="display:inline-block;">
         <p><form action="http://www.microcounsel.com/WPTIPS.HTM" target="_blank"><input type="submit" value="Wordperfect Tips" /></form></p>
-    </li>
-</ul>
+    </div>
+</div>
 
 <p align="center"><iframe width="280" height="158" src="https://www.youtube.com/embed/yNzB_FrwfcA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
