--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@ LI {text-align: center;}
 
 <h1>Multifamily Appraisal Specialists</h1>
 
-<UL>
-    <LI style="display:inline-block;">
+<div>
+    <div style="display:inline-block;">
         <p><form action="https://google.com" target="_blank"><input type="submit" value="Google Search" /></form></p>
-    </LI>
-    <LI style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://drive.google.com/drive/u/0/my-drive" target="_blank"><input type="submit" value="Google Drive" /></form></p>
-    </LI>
-</UL>
+    </div>
+</div>
 
 <ul>
     <li style="display:inline-block;">
