--- a/index.html
+++ b/index.html
@@ -25,62 +25,62 @@ LI {text-align: center;}
     </div>
 </div>
 
-<ul>
-    <li style="display:inline-block;">
+<div>
+    <div style="display:inline-block;">
         <p><form action="https://mail.google.com/mail/u/0/#inbox/" target="_blank"><input type="submit" value="Go to Gmail I" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://mail.google.com/mail/u/1/#inbox/" target="_blank"><input type="submit" value="Go to Gmail II" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://outlook.live.com/mail/0/" target="_blank"><input type="submit" value="Go to Outlook" /></form></p>
-    </li>
-</ul>
+    </div>
+</div>
 
-<ul>
-    <li style="display:inline-block;">
+<div>
+    <div style="display:inline-block;">
         <p><form action="https://docs.google.com/spreadsheets/d/1gydN_H8M-Oz4S9oHrYr6R_UycHH-_E9pdYESJHkOsaQ/edit#gid=1985007998" target="_blank"><input type="submit" value="Go to Progress Board" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://online.rimscentral.com/Portal.aspx" target="_blank"><input type="submit" value="Go to Rims Central" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://sugarsync.com" target="_blank"><input type="submit" value="Go to Sugarsync" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://stdb.com" target="_blank"><input type="submit" value="Go to STDB" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://texaslmi.com" target="_blank"><input type="submit" value="Go to TexasLMI" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <P><form action="https://www.recenter.tamu.edu" target="_blank"><input type="submit" value="Go to Newstalk" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://alndata.com" target="_blank"><input type="submit" value="Go to ALN" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://publication.yieldstar.com" target="_blank"><input type="submit" value="Go to RealPage" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://www.rclco.com/publications/" target="_blank"><input type="submit" value="Go to RCLCO" /></form></p>
-    </li>
-</ul>
+    </div>
+</div>
 
-<ul>
-    <li style="display:inline-block;">
+<div>
+    <div style="display:inline-block;">
         <p><form action="http://www.houstoncad.org/" target="_blank"><input type="submit" value="Go to Houston CAD" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://austincad.org/" target="_blank"><input type="submit" value="Go to Austin CAD" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://www.dallascounty.org/departments/tax/appraisal-districts.php" target="_blank"><input type="submit" value="Go to Dallas CAD" /></form></p>
-    </li>
-    <li style="display:inline-block;">
+    </div>
+    <div style="display:inline-block;">
         <p><form action="https://www.bcad.org/" target="_blank"><input type="submit" value="Go to Bexar CAD" /></form></p>
-    </li>
-</ul>
+    </div>
+</div>
 
 <div>
     <div style="display:inline-block;">
