--- a/index.html
+++ b/index.html
@@ -435,7 +435,8 @@ LI {text-align: center;}
         </tr>
 </table>
 
-
+<a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=warrenthrelkeld@gmail.com&tf=1
+">Contact Us</a>
 
 </BODY>
 </HTML>
