--- a/index.html
+++ b/index.html
@@ -435,10 +435,11 @@ LI {text-align: center;}
         </tr>
 </table>
 
-<HR>
-
-<a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=warren@masvalues.com&tf=1
-">Contact Us</a>
+<div>
+    <div style="display:inline-block;">
+        <p><form action="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=warren@masvalues.com&tf=1" target="_blank"><input type="submit" value="Warren" /></form></p>
+    </div>
+</div>
 
 </BODY>
 </HTML>
