--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ LI {text-align: center;}
 
 <div>
     <div style="display:inline-block;">
-        <p><form action="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=ashlee@masvalues.com&tf=1" target="_blank"><input type="submit" value="Ashlee" /></form></p>
+        <p><form action="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=warrenthrelkeld@gmail.com&tf=1" target="_blank"><input type="submit" value="Contact Us" /></form></p>
     </div>
 </div>
 
