--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ LI {text-align: center;}
 
 <div>
     <div style="display:inline-block;">
-        <p><a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=warrenthrelkeld@gmail.com&tf=1" target"=_blank">Warren</a></p>
+        <p><a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=warren@masvalues.com&tf=1" target"=_blank">Warren</a></p>
     </div>
 </div>
 
