--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@ LI {text-align: center;}
     <div style="display:inline-block;">
         <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=warren@masvalues.com&tf=1">Warren</a></p>
     </div>
+    <div style="display:inline-block;">
+        <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=ashlee@masvalues.com&tf=1">Ashlee</a></p>
+    </div>
+    <div style="display:inline-block;">
+        <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=kyle@masvalues.com&tf=1">Kyle</a></p>
+    </div>
 </div>
 
 <HR>
