--- a/index.html
+++ b/index.html
@@ -90,15 +90,30 @@ LI {text-align: center;}
 
 <p align="center"><iframe width="280" height="158" src="https://www.youtube.com/embed/yNzB_FrwfcA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
-<div>
+<div><b>Contact:</b>
     <div style="display:inline-block;">
-        <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=warren@masvalues.com&tf=1">Warren</a></p>
+        <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=victor@masvalues.com&tf=1">Victor</a></p>
+    </div>
+    <div style="display:inline-block;">
+        <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=john@masvalues.com&tf=1">John</a></p>
+    </div>
+    <div style="display:inline-block;">
+        <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=scott@masvalues.com&tf=1">Scott</a></p>
+    </div>
+    <div style="display:inline-block;">
+        <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=kyle@masvalues.com&tf=1">Kyle</a></p>
     </div>
     <div style="display:inline-block;">
         <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=ashlee@masvalues.com&tf=1">Ashlee</a></p>
     </div>
     <div style="display:inline-block;">
-        <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=kyle@masvalues.com&tf=1">Kyle</a></p>
+        <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=kristin@masvalues.com&tf=1">Kristin</a></p>
+    </div>
+    <div style="display:inline-block;">
+        <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=priscilla@masvalues.com&tf=1">Priscilla</a></p>
+    </div>
+    <div style="display:inline-block;">
+        <p><a target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=warren@masvalues.com&tf=1">Warren</a></p>
     </div>
 </div>
 
