--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@ LI {text-align: center;}
 </style>
 
 <h1>Multifamily Appraisal Specialists</h1>
+    
+<div>
+    <div style="display:inline-block;">
+        <p><iframe src="https://free.timeanddate.com/clock/i8mbgzsc/n401/fn2/tcccc/bo2/tt0/ts1/ta1" frameborder="0" width="426" height="24"></iframe></p>
+    </div>
+    <div style="display:inline-block;">    
+        <p><iframe src="https://free.timeanddate.com/clock/i8mbhj78/n103/fn2/tcccc/bo2/tt0/ts1/ta1" frameborder="0" width="427" height="24"></iframe></p>
+    </div>
+</div>
 
 <div>
     <div style="display:inline-block;">
@@ -87,8 +96,6 @@ LI {text-align: center;}
         <p><form action="http://www.microcounsel.com/WPTIPS.HTM" target="_blank"><input type="submit" value="Wordperfect Tips" /></form></p>
     </div>
 </div>
-
-<p align="center"><iframe src="https://free.timeanddate.com/clock/i8mbgzsc/n401/fn2/tcccc/bo2/tt0/ts1/ta1" frameborder="0" width="426" height="24"></iframe></p>
 
 <p align="center"><iframe width="280" height="158" src="https://www.youtube.com/embed/yNzB_FrwfcA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
